--- a/mywebserver.yml
+++ b/mywebserver.yml
@@ -7,9 +7,12 @@
     apt:
       name: apache2
       state: present
+    when: ansible_os_family== "Debian"
 
   - name: start webserver on ubuntu ansible nodes
     service:
       name: apache2
       state: started
+    when: ansible_os_family== "Debian"
+    
     
