--- a/mywebserver.yml
+++ b/mywebserver.yml
@@ -5,25 +5,25 @@
   tasks:
   - name: install webserver  on ubuntu ansible nodes
     apt:
-      name: apache2
+      name: "{{mywebserverpackonubuntu}}"
       state: present
     when: ansible_os_family== "Debian"
 
   - name: start webserver on ubuntu ansible nodes
     service:
-      name: apache2
+      name: "{{mywebserverpackonubuntu}}"
       state: started
     when: ansible_os_family== "Debian"
     
   - name: install webserver  on RedHat ansible nodes
     yum: 
-     name:  httpd
+     name:  "{{mywebserverpackonredhat}}"
      state: present
     when: ansible_os_family =="RedHat"
 
   - name: start webserver on RedHat ansible nodes
     service:
-       name: httpd
+       name: "{{mywebserverpackonredhat}}"
        state: started
     when: ansible_os_family =="RedHat"
     
