--- a/mydebug.yml
+++ b/mydebug.yml
@@ -9,3 +9,15 @@
   - name:  i want to display first task result 
     debug:
        msg: "{{myfirsttaskresult}}"
+
+  - name: install git
+    apt:
+      name: git
+      state: present
+    when: myfirsttaskresult.stderr ==""
+
+  - name: install tree
+    apt:
+     name: tree
+     state: present
+    when: myfirsttaskresult.stderr !=""
