--- a/myfilehandling.yml
+++ b/myfilehandling.yml
@@ -2,7 +2,4 @@
 - hosts: 172.31.18.81
   become: yes
   tasks:
-  - name: create file 
-    file:
-      path: /home/ubuntu/mytestfile
-      state: touch
+  - include_tasks: myfile.yml
