--- a/myfilehandling.yml
+++ b/myfilehandling.yml
@@ -3,3 +3,9 @@
   become: yes
   tasks:
   - include_tasks: myfile.yml
+  - name: copy static files into ansible nodes
+    copy:
+       src: mytestfile
+       dest: /home/ubuntu/mysaticfile
+
+  
