--- a/myfilehandling.yml
+++ b/myfilehandling.yml
@@ -7,5 +7,10 @@
     copy:
        src: mytestfile
        dest: /home/ubuntu/mysaticfile
+  - name: install webserver 
+    apt:
+      name: apache2
+      state: present
+      
 
   
