--- a/mytomrole/tasks/main.yml
+++ b/mytomrole/tasks/main.yml
@@ -8,3 +8,4 @@
 - include_tasks: tomadminusers.yml
 - include_tasks: tomservice.yml
 - include_tasks: tomstart.yml
+- include_tasks: deployjavaapp.yml
